# QuadCV_WIP

./: CMakeLists.txt  README.md  otrack.bak  otrack.bak2  otrack.cpp  otrackRGB.cpp  quadRec.cpp
src/: andy.m  video_write.cpp
